--- a/web.html
+++ b/web.html
@@ -7,11 +7,11 @@
   <body>
     <script src="./backend.js"> </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    </header>Todos</header>
+    <header>Yi Meng's Travel Journal</header>
     <form>
       <input type="text" class="todo-input">
       <button type="submit" class="todo-button">
-        <i class="fas fa-plus-square"></i>
+        <i class="fas fa-search"></i>
       </button>
     </form>
     <div class="todo-container">
