--- a/web.html
+++ b/web.html
@@ -7,15 +7,12 @@
   <body>
     <script src="./backend.js"> </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <header>Yi Meng's Travel Journal</header>
-    <form>
-      <input type="text" class="todo-input">
-      <button type="submit" class="todo-button">
+    <header class="head">Yi Meng's Travel Journal</header>
+    <form class="searh-bar"> 
+      <input type="text" class="search-input">
+      <button type="submit" class="search-button">
         <i class="fas fa-search"></i>
       </button>
     </form>
-    <div class="todo-container">
-      <ul class="todo=list"></ul>
-    </div>
   </body>
 </html>
