--- a/web.html
+++ b/web.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html Lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
@@ -7,6 +7,17 @@
   <body>
     <script src="./backend.js"> </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <nav>
+      <div class="hamburger"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <ul class="nav-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Journals</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     <header class="head">Yi Meng's Travel Journal</header>
     <form class="searh-bar"> 
       <input type="text" class="search-input">
