simple bar with hamburger

--- a/web.html
+++ b/web.html
@@ -8,15 +8,16 @@
     <script src="./backend.js"> </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <nav>
-      <div class="hamburger"></div>
+      <div class="hamburger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-        <ul class="nav-links">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Journals</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+      </div>  
+      <ul class="nav-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Journals</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
     <header class="head">Yi Meng's Travel Journal</header>
     <form class="searh-bar"> 
