smoother bar animation while the window is down-sized

--- a/web.html
+++ b/web.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <script src="./backend.js"> </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <nav>
       <div class="hamburger">
@@ -20,11 +19,12 @@
       </ul>
     </nav>
     <header class="head">Yi Meng's Travel Journal</header>
-    <form class="searh-bar"> 
+    <form class="search-bar"> 
       <input type="text" class="search-input">
       <button type="submit" class="search-button">
         <i class="fas fa-search"></i>
       </button>
     </form>
+    <script src="./backend.js"> </script>
   </body>
 </html>
