main bar cover effect

--- a/web.html
+++ b/web.html
@@ -13,9 +13,10 @@
         <div class="line"></div>
       </div>  
       <ul class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Journals</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">JOURNALS</a></li>
+        <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
     <header class="head">Yi Meng's Travel Journal</header>
