--- a/web.html
+++ b/web.html
@@ -19,13 +19,7 @@
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
-    <header class="head">Yi Meng's Travel Journal</header>
-    <form class="search-bar"> 
-      <input type="text" class="search-input">
-      <button type="submit" class="search-button">
-        <i class="fas fa-search"></i>
-      </button>
-    </form>
+    <header class="head">Yi Meng Wang</header>
     <script src="./backend.js"> </script>
   </body>
 </html>
