--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </div>  
       <ul class="nav-links">
         <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">JOURNALS</a></li>
+        <li><a href="#">PROJECT</a></li>
+        <li><a href="#">RESUME</a></li>
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
