--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html Lang="en">
   <head>
-    <meta name = "viewport" content="width=device-width, initial scale=1">
+    <meta name = "viewport" content="width=device-width, initial scale=1, max-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
