--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
-    <header class="head">Yi Meng Wang</header>
+    <div class = "titlepage">
+      <header class="head">Hi</header>
+      <h3>My name is Yi Meng Wang</h3>
+      <h2>And I Code</h2>
+      <p>Website under development.</p>
+    </div>
     <script src="./backend.js"> </script>
   </body>
 </html>
