i will be fancy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <div class = "titlepage">
       <header class="head">Hi</header>
-      <h3>My name is Yi Meng Wang</h3>
+      <h3>My name is Yi Meng</h3>
       <h2>And I Code</h2>
       <p>Website under development.</p>
     </div>
