--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name = "viewport" content="width=device-width, initial scale=1, max-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <title>Yi Meng Wang</title>
   </head>
   <body>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
