--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
       </ul>
     </nav>
     <div class = "titlepage">
-      <header class="head">Hi</header>
-      <h3>My name is Yi Meng</h3>
-      <h2>And I Code</h2>
-      <p>Website under development.</p>
+      <h2 class="head">Hello</h2>
+      <p>I'm Yi Meng!</p>
     </div>
+    <div class="container">
+      <div class="back-block"></div>
+      <div class="top-block">
+        <img src="yimengphotocopy.png" id="yimengphoto">
+        <h3 class="name">Yi Meng Wang</h3>
+        <h3 class="dash">-------------------------------</h3>
+        <p class="student">Software Engineering Student</p>
+      </div>
+    </div>
+  <div class="bottom">
+    <h3 class="copyright">@2021 By Yi Meng Wang</h3>
+  </div>
     <script src="./backend.js"> </script>
   </body>
 </html>
