mobile hi fixed

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
-    <div class = "titlepage">
-      <h2 class="head">Hello</h2>
-      <p>I'm Yi Meng!</p>
-    </div>
+
     <div class="container">
+      <div class = "titlepage">
+        <h2 class="head">Hello</h2>
+        <p>I'm Yi Meng!</p>
+      </div>
       <div class="back-block"></div>
       <div class="top-block">
         <img src="yimengphotocopy.png" id="yimengphoto">
@@ -35,7 +36,7 @@
       </div>
     </div>
   <div class="bottom">
-    <h3 class="copyright">@2021 By Yi Meng Wang</h3>
+    <p class="copyright">@2021 By Yi Meng Wang</p>
   </div>
     <script src="./backend.js"> </script>
   </body>
