--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="yimengphotocopy.png" id="yimengphoto">
         <h3 class="name">Yi Meng Wang</h3>
         <h3 class="dash">-------------------------------</h3>
-        <p class="student">Software Engineering Student</p>
+        <h4 class="student">Software Engineering Student</h4>
       </div>
     </div>
   <div class="bottom">
