--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name = "viewport" content="width=device-width, initial scale=1, max-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Yi Meng Wang</title>
   </head>
@@ -26,6 +27,13 @@
       <div class = "titlepage">
         <h2 class="head">Hello</h2>
         <p>I'm Yi Meng!</p>
+      </div>
+      <div class = "intro">
+        <p class = "paragraph">I'm a third-year Software Engineering student at University of Alberta.
+          I am interested in all kinds of programming! Currently, I'm learning about 
+          data analysis and machine learning. Aside from programming, I also a passionate financial
+          advisor. Feel free to reach out!
+        </p>
       </div>
       <div class="back-block"></div>
       <div class="top-block">
