--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>  
       <ul class="nav-links">
         <li><a href="#">HOME</a></li>
-        <li><a href="#">PROJECT</a></li>
         <li><a href="#">RESUME</a></li>
+        <li><a href="#">PROJECT</a></li>
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
@@ -41,8 +41,16 @@
         <h3 class="name">Yi Meng Wang</h3>
         <h3 class="dash">-------------------------------</h3>
         <h4 class="student">Software Engineering Student</h4>
+        <span>
+          <a href='https://github.com/1yimeng' target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/yi-meng-wang/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="mailto: yimeng2@ualberta.ca"><i class="far fa-envelope"></i></a>
+        </span>
       </div>
     </div>
+  <div class="resume">
+
+  </div>
   <div class="bottom">
     <p class="copyright">@2021 By Yi Meng Wang</p>
   </div>
