added resume in pdf

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>  
       <ul class="nav-links">
         <li><a href="#home">HOME</a></li>
-        <li><a href="#resume">RESUME</a></li>
+        <li><a href="resume.pdf" target="_blank">RESUME</a></li>
         <li><a href="#project">PROJECT</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -50,10 +50,6 @@
           </div>
         </div>
   
-      </section>
-    
-      <section class="resume" id="resume">
-        <h1>resume yes</h1>
       </section>
 
       <section class="project" id="project">
