added templates for projects and quote

--- a/index.html
+++ b/index.html
@@ -53,7 +53,33 @@
       </section>
 
       <section class="project" id="project">
-        <h1>project yes</h1>
+        <div class="col">
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+          <div class="card">
+            <h5 class="project-title">my project hehe</h5>
+            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+          </div>
+        </div>
+       
       </section>
       
       <section class="contact" id="contact">
@@ -62,6 +88,7 @@
           <a href="https://www.linkedin.com/in/yi-meng-wang/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           <a href="mailto: yimeng2@ualberta.ca"><i class="far fa-envelope"></i></a>
         </span>
+        <p class="quote">“Success is not final, failure is not fatal: it is the courage to continue that counts.” ― Winston S. Churchill</p>
         <p class="copyright">@2021 By Yi Meng Wang</p>
       </section>
     </div>
