updated project info

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://psemano.itch.io/amane-adventures" target="_blank"><i class="fas fa-external-link-alt" id="link"></i></a>
             <a style="text-decoration: none" href="https://psemano.itch.io/amane-adventures" target="_blank"><h5 class="project-title">Amane Adventure</h5></a>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+            <p class="pdescription">A platform game that raises water awareness and promotes water data collection, made with unity</p>
             <p class="technology">Unity</p>
             
           </div>
@@ -66,15 +66,15 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/carebot" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Care Bot (Discord)</h5>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
-            <p class="technology">Python DiscordAPI</p>
+            <p class="pdescription">A cool bot that sends out random pick-up line, toast, roast, and can also store and delete personalized quotes.</p>
+            <p class="technology">Python DiscordAPI BeautifulSoup</p>
           </div>
 
           <div class="card">
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/Country-GDP-scraping" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Countries' GDP</h5>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+            <p class="pdescription">A program that scrapes all countries' GDP, exports the data to a csv file, and visualizes countries' GDP</p>
             <p class="technology">Python BeautifulSoup Pandas Bokeh</p>
           </div>
 
@@ -82,7 +82,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/1yimeng.github.io" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Personal Website</h5>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+            <p class="pdescription">A simple personal website that shows my project and resume. You are on this website right now. :)</p>
             <p class="technology">HTML CSS JavaScript</p>
           </div>
 
@@ -90,7 +90,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/followers-checking" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Follwer Checking</h5>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+            <p class="pdescription">An automation project that uses selenium to webscrape and check who is not following you back on Instagram.</p>
             <p class="technology">Python Selenium</p>
           </div>
           
@@ -99,7 +99,7 @@
             <a style="text-decoration: none" href="http://snappieplanner.com/" target="_blank"><i class="fas fa-external-link-alt" id="link"></i></a>
             <a style="text-decoration: none" href="https://github.com/1yimeng/Snappie-Planner/tree/frontend" target="_blank"><i class="fab fa-github" id="github"></i></a>
             <h5 class="project-title">Snappie Planner</h5>
-            <p class="pdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ne.</p>
+            <p class="pdescription">A website that helps you schedule your day based on your needs!</p>
             <p class="technology">HTML CSS JavaScript PHP SQL</p>
           </div>
         </div>
