--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://psemano.itch.io/amane-adventures" target="_blank"><i class="fas fa-external-link-alt" id="link"></i></a>
             <a style="text-decoration: none" href="https://psemano.itch.io/amane-adventures" target="_blank"><h5 class="project-title">Amane Adventure</h5></a>
-            <p class="pdescription">A platform game that raises water awareness and promotes water data collection, made with unity</p>
+            <p class="pdescription">A platform game that raises water awareness and promotes water data collection, made with unity.</p>
             <p class="technology">Unity</p>
             
           </div>
@@ -74,7 +74,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/Country-GDP-scraping" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Countries' GDP</h5>
-            <p class="pdescription">A program that scrapes all countries' GDP, exports the data to a csv file, and visualizes countries' GDP</p>
+            <p class="pdescription">A program that scrapes all countries' GDP, exports the data to a csv file, and visualizes countries' GDP with bokeh.</p>
             <p class="technology">Python BeautifulSoup Pandas Bokeh</p>
           </div>
 
@@ -82,7 +82,7 @@
             <i class="far fa-folder" id="folder"></i>
             <a style="text-decoration: none" href="https://github.com/1yimeng/1yimeng.github.io" target="_blank"><i class="fab fa-github" id="link"></i></a>
             <h5 class="project-title">Personal Website</h5>
-            <p class="pdescription">A simple personal website that shows my project and resume. You are on this website right now. :)</p>
+            <p class="pdescription">A simple personal website that shows my projects and resume. You are on this website right now. :)</p>
             <p class="technology">HTML CSS JavaScript</p>
           </div>
 
