--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>  
       <ul class="nav-links">
         <li><a href="#home">HOME</a></li>
-        <li><a href="resume.pdf" target="_blank">RESUME</a></li>
+        <li><a href="Yimengresume.pdf" target="_blank">RESUME</a></li>
         <li><a href="#project">PROJECT</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
