updated resume and folders

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>  
       <ul class="nav-links">
         <li><a href="#home">HOME</a></li>
-        <li><a href="Yimengresume.pdf" target="_blank">RESUME</a></li>
+        <li><a href="files/yimengresume.pdf" target="_blank">RESUME</a></li>
         <li><a href="#project">PROJECT</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -33,12 +33,12 @@
             <p class = "paragraph">I'm a third-year Software Engineering student at University of Alberta.
               I am interested in all kinds of programming! Currently, I'm learning about 
               data analysis and machine learning. Aside from programming, I also a passionate financial
-              advisor. Feel free to reach out!
+              advisor. I am currently looking for a Co-op position during both winter and summer 2022, if there is a fitting role, please contact me! Thank you!
             </p>
           </div>
           <div class="back-block"></div>
           <div class="top-block">
-            <img src="yimengphotocopy.png" id="yimengphoto">
+            <img src="files/yimengphotocopy.png" id="yimengphoto">
             <h3 class="name">Yi Meng Wang</h3>
             <h3 class="dash">-------------------------------</h3>
             <h4 class="student">Software Engineering Student</h4>
