view height for grids

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class = "paragraph">I'm a third-year Software Engineering student at University of Alberta.
               I am interested in all kinds of programming! Currently, I'm learning about 
               data analysis and machine learning. Aside from programming, I also a passionate financial
-              advisor. I am currently looking for a Co-op position during both winter and summer 2022, if there is a fitting role, please contact me! Thank you!
+              advisor. 
             </p>
           </div>
           <div class="back-block"></div>
@@ -50,14 +50,6 @@
           </div>
         </div>
   
-      </section>
-
-      <section class='self-intro'>
-        <p class='selfp'>Hello! I'm a third-year Software Engineering student at University of Alberta.
-          I am interested in all kinds of programming! Currently, I'm learning about 
-          data analysis and machine learning. Aside from programming, I also a passionate financial
-          advisor. Feel free to reach out!
-        </p>
       </section>
 
       <section class="project" id="project">
