--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <a href="mailto: yimeng2@ualberta.ca"><i class="far fa-envelope"></i></a>
         </span>
         <p class="quote">“Success is not final, failure is not fatal: it is the courage to continue that counts.” ― Winston S. Churchill</p>
-        <p class="copyright">@2021 By Yi Meng Wang</p>
+        <p class="copyright" id="time">hello</p>
       </section>
     </div>
     
