--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="back-block"></div>
           <div class="top-block">
-            <img src="files/yimengphotocopy.png" id="yimengphoto">
+            <img src="img/profile.png" id="yimengphoto">
             <h3 class="name">Yi Meng Wang</h3>
             <h3 class="dash">-------------------------------</h3>
             <h4 class="student">Software Engineering Student</h4>
